src/test/deca/codegen/valid/no-objects/while_print_and_inc.ass
	TSTO #1
	BOV StackOverflowError
; Main program
; Beginning of main function:
	ADDSP #1
	LOAD #0, R0
	STORE R0, 1(GB)
cmp_cond_1795960102:
	LOAD 1(GB), R0
	LOAD R0, R2
	LOAD #10, R0
	LOAD R2, R1
	CMP R0, R1
	BNE cmp_true_366590980
	LOAD #0, R0
	BRA cmp_end_366590980
cmp_true_366590980:
	LOAD #1, R0
cmp_end_366590980:
	LOAD #0, R1
	CMP R0, R1
	BEQ cmp_end_1795960102
	LOAD 1(GB), R0
	LOAD R0, R1
	WINT
	WNL
	LOAD 1(GB), R0
	LOAD R0, R3
	LOAD #1, R0
	LOAD R3, R1
	ADD R1, R0
	STORE R0, 1(GB)
	BRA cmp_cond_1795960102
cmp_end_1795960102:
; End of main function.
	HALT
; End of main function.
DivisionByZeroError:
	WSTR "Erreur : divison par zéro."
	WNL
	ERROR
StackOverflowError:
	WSTR "Erreur : débordement de la pile."
	WNL
	ERROR
